# SIFT-parallel-optimization

./: CMakeLists.txt  GaussDePyramid-AVX512xOpenMP.h  GaussDePyramid-AVX512xPTHREAD.h  GaussDePyramid-AVXxOpenMP.h  GaussDePyramid-AVXxPTHREAD.h  GaussDePyramid-MPI.h  GaussDePyramid-NEON.h  GaussDePyramid-NEONxOpenMP.h  GaussDePyramid-NEONxPTHREAD.h  GaussDePyramid-OpenMP.h  GaussDePyramid-SSExPTHREAD.h  GaussDePyramid-pThread.h  GuassDePyramid.h  main.cpp  mpitest.cpp
